# near-contracts

./: .gitignore  Cargo.toml  README.md  build.sh  deploy-testnet.sh  deploy.sh  test-deploy.sh  using-near-oracle.md
client-test-contract/: Cargo.toml
client-test-contract/src/: lib.rs
dia-contract/: Cargo.toml
dia-contract/src/: lib.rs
quote-test-contract/: Cargo.toml
quote-test-contract/src/: lib.rs
src/: lib.rs
supply-test-contract/: Cargo.toml
supply-test-contract/src/: lib.rs
symbols-test-contract/: Cargo.toml
symbols-test-contract/src/: lib.rs
trade-volume-test-contract/: Cargo.toml
trade-volume-test-contract/src/: lib.rs
